--- a/docs/Design/MG/MG.tex
+++ b/docs/Design/MG/MG.tex
@@ -201,8 +201,8 @@ actually be implemented.
 \item [\refstepcounter{mnum} \mthemnum \label{mEC}:] Exercise Creation Module
 \item [\refstepcounter{mnum} \mthemnum \label{mTS}:] Timed Sequence Module
 \item [\refstepcounter{mnum} \mthemnum \label{mQuantifier}:] Quantifier Module
+\item [\refstepcounter{mnum} \mthemnum \label{mDatabase}:] Database Communicator Module
 \end{description}
-
 
 \begin{table}[h!]
 \centering
@@ -228,6 +228,7 @@ actually be implemented.
 & workout routine creation\\
 & exercise creation\\
 & timed sequence\\
+& DatabaseCommunicator\\
 \midrule
 
 \multirow{1}{0.3\textwidth}{Software Decision Module}
@@ -244,15 +245,6 @@ actually be implemented.
 The design of the system is intended to satisfy the requirements developed in
 the SRS. In this stage, the system is decomposed into modules. The connection
 between requirements and modules is listed in Table \ref{TblRT}.
-
-\wss{The intention of this section is to document decisions that are made
-  ``between'' the requirements and the design.  To satisfy some requirements,
-  design decisions need to be made.  Rather than make these decisions implicit,
-  they are explicitly recorded here.  For instance, if a program has security
-  requirements, a specific design decision may be made to satisfy those
-  requirements with a password.  In scientific examples, the choice of algorithm
-could potentially go here, if that is a decision that is exposed by the
-interface.}
 
 \section{Module Decomposition} \label{SecMD}
 
@@ -434,17 +426,41 @@ requirements and between the modules and the anticipated changes.
 \toprule
 \textbf{Req.} & \textbf{Modules}\\
 \midrule
-R1 & \mref{mHH}, \mref{mInput}, \mref{mParams}, \mref{mControl}\\
-R2 & \mref{mInput}, \mref{mParams}\\
-R3 & \mref{mVerify}\\
-R4 & \mref{mOutput}, \mref{mControl}\\
-R5 & \mref{mOutput}, \mref{mODEs}, \mref{mControl}, \mref{mSeqDS}, \mref{mSolver}, \mref{mPlot}\\
-R6 & \mref{mOutput}, \mref{mODEs}, \mref{mControl}, \mref{mSeqDS}, \mref{mSolver}, \mref{mPlot}\\
-R7 & \mref{mOutput}, \mref{mEnergy}, \mref{mControl}, \mref{mSeqDS}, \mref{mPlot}\\
-R8 & \mref{mOutput}, \mref{mEnergy}, \mref{mControl}, \mref{mSeqDS}, \mref{mPlot}\\
-R9 & \mref{mVerifyOut}\\
-R10 & \mref{mOutput}, \mref{mODEs}, \mref{mControl}\\
-R11 & \mref{mOutput}, \mref{mODEs}, \mref{mEnergy}, \mref{mControl}\\
+FR1 & \mref{mWRC}\\
+FR2 & \mref{mExercise}, \mref{mWR}, \mref{mEC}\\
+FR3 & \mref{mExercise}, \mref{mQuantifier}\\
+FR4 & \mref{mWR}, \mref{mUP}\\
+FR5 & \mref{mWR}\\
+FR6 & \mref{mWR}, \mref{mWB}\\
+FR7 & \mref{mUP}\\
+FR8 & \mref{mUP}\\
+FR9 & \mref{mExercise}, \mref{mUFG}, \mref{mEC}, \mref{mQuantifier}\\
+FR10 & \mref{mExercise}, \mref{mUFG}, \mref{mQuantifier}\\
+FR11 & \mref{mUFG}, \mref{mWB}\\
+\midrule
+NFR1 & \mref{mUP}\\
+NFR2 & \mref{mUP}\\
+NFR3 & \mref{mUP}\\
+NFR4 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mUL}, \mref{mUR}, \mref{mUP}, \mref{mUFG}, \mref{mWB}, \mref{mCreation}\\
+NFR5 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mUP}, \mref{mUFG}, \mref{mWB}\\
+NFR6 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mUP}, \mref{mUFG}, \mref{mWB}\\
+NFR7 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mUP}, \mref{mUFG}, \mref{mWB}\\
+NFR8 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mWC}, \mref{mWRC}, \mref{mEC}\\
+NFR9 & \mref{mWB}\\
+NFR10 & \mref{mDatabase}\\
+NFR11 & \mref{mDatabase}\\
+NFR12 & \mref{mDatabase}\\
+NFR13 & \mref{mHH}\\
+NFR14 & \mref{mUP}\\
+NFR15 & \mref{mUP}\\
+NFR16 & \mref{mHH}\\
+NFR17 & \mref{mHH}\\
+NFR18 & \mref{mHH}\\
+NFR19 & \mref{mUP}, \mref{mWB}\\
+NFR20 & \mref{mUP}, \mref{mWB}\\
+NFR21 & \mref{mUP}\\
+NFR22 & \mref{mDatabase}\\
+
 \bottomrule
 \end{tabular}
 \caption{Trace Between Requirements and Modules}
