--- a/docs/Design/SystDesign/SysDes.tex
+++ b/docs/Design/SystDesign/SysDes.tex
@@ -109,7 +109,7 @@
 	\section{Project Overview}
 	
 	\subsection{Normal Behaviour}
-	
+  
 	Normal behaviour for the application can be defined as the state of the available program when all FRs and NFRs are fulfilled. If an FR or NFR is not fulfilled, this is abnormal behaviour, and indicative of the occurrence of an undesired event.
 	
 	\subsection{Undesired Event Handling}
@@ -124,21 +124,29 @@
 	\\
 	
 	Error messages are kept consistent and concise in format, to make errors easy for the user to recognize and act upon.
-	
-	
-	
-	
-	
+  
 	\subsection{Component Diagram}
 	
 	\subsection{Connection Between Requirements and Design} \label{SecConnection}
 	
-	\wss{The intention of this section is to document decisions that are made
-		``between'' the requirements and the design.  To satisfy some requirements,
-		design decisions need to be made.  Rather than make these decisions implicit,
-		they are explicitly recorded here.  For instance, if a program has security
-		requirements, a specific design decision may be made to satisfy those
-		requirements with a password.}
+	\begin{tabular}{|c|c|}
+		\hline
+		Requirement & Design \\
+		\hline
+		The product shall appear minimal and straightforward & The application will contain an interface that only presents information that is necessary as to prevent cluttering and reduce minimality \\
+		\hline
+		The product shall use fonts of readable size to the target user group & Fonts of size 10-12 will be used across the application \\
+		\hline
+		The product shall be able to be used by untrained fitness enthusiasts and amateurs alike, who receive no training before using it & UI will be simplistic and consistent throughout, reducing the learning curve for users \\
+		\hline
+		The product shall be usable by users with hearing loss or partial blindness & The application will rely on both audio and visual cues to indicate correct inputs or application events \\
+		\hline
+		The application must inform users when maintenance is taking place and must warn them at least 1 day in advance & The application will utilize pop up screens to display important notifications to the user \\
+		\hline
+		The applicaiton will allow users to report offensive content and remove it from their feed & There will be a button on each post that gives user the option to report offensive content \\
+		\hline
+
+	\end{tabular}
 	
 	\section{System Variables}
 	
