--- a/docs/Design/MG/MG.tex
+++ b/docs/Design/MG/MG.tex
@@ -514,8 +514,14 @@ The information in this section will be used to evaluate the team members on the
 graduate attribute of Lifelong Learning.  Please answer the following questions:
 
 \begin{enumerate}
-  \item 
-  \item 
+  \item Q: What other designs were considered? \\
+  a) Currently, the users and workout/routine creation are considered separate from each other but during one of the design meetings there was a conversion regarding creation being a user's action. This design involved the user module creating workouts and routines rather than having a separate interface.
+  
+  b) An alternative design for the flow of exercise, workout and routines that was considered was time-based. This means that each (workout, routine, exercise) would have a time and their sub-parts would schedule off a portion of the total duration.
+  \item Q: Why was this one selected? \\ 
+  a) As a group, we decided to keep these as separate modules because creation is its own process and does not directly interface with the user module. By keeping these as separate processes it helps exercise the idea of 'separation of concerns'
+  
+  b) We decided to no use time-sectioning for the workouts / routines because it would cause limitations and be much more difficult to implement compared to having them as a sequence of events. If we wanted to collect the total duration of the workout / routine, a simple summation of parts would suffice.
 \end{enumerate}
 
 \end{document}
