Fix broken table

--- a/docs/Design/MG/MG.tex
+++ b/docs/Design/MG/MG.tex
@@ -8,6 +8,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{hyperref}
+\usepackage{array}
 \hypersetup{
     colorlinks,
     citecolor=blue,
@@ -240,13 +241,16 @@ actually be implemented.
 \label{TblMH}
 \end{table}
 
+\newpage
 \section{Connection Between Requirements and Design} \label{SecConnection}
 
 The design of the system is intended to satisfy the requirements developed in
 the SRS. In this stage, the system is decomposed into modules. The connection
 between requirements and modules is listed in Table \ref{TblRT}.
 
-\begin{tabular}{|c|c|}
+\newpage
+
+\begin{tabular}{ | m{20em} | m{20em} | } 
   \hline
   Requirement & Design \\
   \hline
