adds gantt chart and ui interfaces to sysdesign doc

--- a/docs/Design/SystDesign/SysDes.tex
+++ b/docs/Design/SystDesign/SysDes.tex
@@ -9,6 +9,8 @@
 \usepackage{float}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{adjustbox}
+
 \graphicspath{ {./images/} }
 \hypersetup{
 	colorlinks,
@@ -160,6 +162,45 @@
 %	\subsection{Constants Variables}
 	
 	\section{User Interfaces}
+
+  \begin{figure}[H]
+		\centering
+		\includegraphics[width=\linewidth,keepaspectratio]{register_stack}
+		\caption{Multi page register form}
+	\end{figure}
+
+  \begin{figure}[H]
+		\centering
+		\includegraphics[scale=0.35]{home_screen}
+		\caption{Home Screen (Landing page for logged in users)}
+	\end{figure}
+
+  \begin{figure}[H]
+		\centering
+		\includegraphics[scale=0.35]{discover_screen}
+		\caption{Discover Screen}
+	\end{figure}
+
+  \begin{figure}[H]
+		\centering
+		\includegraphics[width=\linewidth,keepaspectratio]{static_program_stack}
+    \caption{Static Program Stack: View when browsing programs from other authors or non active, personal programs.}
+	\end{figure}
+
+  \begin{figure}[H]
+		\centering
+		\includegraphics[width=\linewidth,keepaspectratio]{create_program_form}
+    \caption{Multi page form for creating a program.}
+	\end{figure}
+
+  \begin{figure}[H]
+		\centering
+		\includegraphics[width=\linewidth,keepaspectratio]{active_program_stack}
+    \caption{Multi page form for creating a program.}
+	\end{figure}
+
+
+  
 	
 	\wss{Design of user interface for software and hardware.  Attach an appendix if
 		needed. Drawings, Sketches, Figma}
@@ -193,8 +234,15 @@
 	
 	\section{Timeline}
 	\wss{Schedule of tasks and who is responsible}
+
+  Below is a timeline of the major milestones and the developers responsible for completing them.
+
+  \begin{figure}[H]
+		\centering
+		\includegraphics[width=\linewidth,keepaspectratio]{gantt_chart}
+    \caption{Multi page form for creating a program.}
+	\end{figure}
 	
-	Below is a timeline of the major milestones and the developers responsible for completing them.
 	
 	% \bibliographystyle {plainnat}
 	% \bibliography{../../../refs/References}
