added component diagram to system design doc

--- a/docs/Design/SystDesign/SysDes.tex
+++ b/docs/Design/SystDesign/SysDes.tex
@@ -120,6 +120,12 @@
 	Error messages are kept consistent and concise in format, to make errors easy for the user to recognize and act upon.
   
 	\subsection{Component Diagram}
+
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\linewidth,keepaspectratio]{component_diagram}
+    \caption{Diagram of Module Interactions}
+	\end{figure}
 	
 	\subsection{Connection Between Requirements and Design} \label{SecConnection}
 	
