--- a/docs/Design/SystDesign/SysDes.tex
+++ b/docs/Design/SystDesign/SysDes.tex
@@ -248,10 +248,24 @@
 	\begin{enumerate}
 		\item What are the limitations of your solution?  Put another way, given
 		unlimited resources, what could you do to make the project better? (LO\_ProbSolutions)
+		
+		Limitations: require database to be populated (need users to create workouts and routines so other users can view and add)
+		Given unlimited resources, having advertising or even starting users would help this problem of un-populated data.
+		
+		Another limitation would be that users cannot project their goals (extrapolation of their fitness goals).
+		Given unlimited user data and statistics this could be predicted to help users estimate when they will reach their fitness goals
+		
 		\item Give a brief overview of other design solutions you considered.  What
 		are the benefits and tradeoffs of those other designs compared with the chosen
 		design?  From all the potential options, why did you select documented design?
 		(LO\_Explores)
+		
+		Considering the software architecture, another alternative design for the flow of exercise, workout and routines that was considered was time-based. This means that each (workout, routine, exercise) would have a time and their sub-parts would schedule off a portion of the total duration.
+
+		For our actual implementation, we decided to keep these as separate modules because creation is its own process and does not directly interface with the user module. By keeping these as separate processes, it helps exercise the idea of 'separation of concerns'.
+		
+		We decided not to use time-sectioning for the workouts / routines because it would cause limitations and be much more difficult to implement compared to having them as a sequence of events. If we wanted to collect the total duration of the workout / routine, a simple summation of parts would suffice.
+		
 	\end{enumerate}
 	
 \end{document}
