--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -67,12 +67,53 @@ This document ...
 \section{Functional Requirements Evaluation}
 
 \section{Nonfunctional Requirements Evaluation}
-
-\subsection{Usability}
-		
-\subsection{Performance}
-
-\subsection{etc.}
+Unless Specified these tests were performed with a semi-structured interview where users were brought scenarios then asked questions relevant to that scenario. Most Scenarios followed the key use cases of the application.\\
+Examples include:
+\begin{enumerate}
+	\item Creating an Account.
+	\item Logging into an account.
+	\item Creating a Program.
+	\item Creating a Workout.
+	\item Creating an Exercise.
+	\item Searching for an Exercise.
+	\item Using the Discovery page to browse workouts and programs.
+	\item Finding new workouts from the Discovery page.
+	\item Starting a workout (as if the user were to use the application during their workout).
+\end{enumerate}
+\subsection{Look and Feel Testing}
+\begin{enumerate}
+	\item{\textbf{test-LF-1}}: Style.
+\subsubsection{Usability and Humanity Tests}
+	\item{\textbf{test-UH-1}}: Text Sizing and Visibility.
+	\item{\textbf{test-UH-2}}: Text Language.
+	\item{\textbf{test-UH-3}}: Learnability.
+	\item{\textbf{test-UH-4}}: Understandability.
+	\item{\textbf{test-UH-5}}: Hearing and Audio considerations.
+	\item{\textbf{test-UH-6}}: Use of Colour and Contrast.
+\subsubsection{Performance Tests}
+	\item{\textbf{test-PF-1}}: Speed and Latency.
+	\item{\textbf{test-PF-2}}: Accuracy and Precision of Quantifiers.
+	\item{\textbf{test-PF-3}}: Availability and Uptime.
+	\item{\textbf{test-PF-4}}: User Capacity.
+	\item{\textbf{test-PF-5}}: Scalability of User Capacity.
+\subsubsection{Operational and Environment Tests}
+	\item{\textbf{test-OE-1}}: Supported Systems.
+\subsubsection{Maintainability and Support Tests}
+	\item{\textbf{test-MS-1}}: Maintenance.
+\subsubsection{Security Tests}
+	\item{\textbf{test-SEC-1}}: Private and Public Details.
+	\item{\textbf{test-SEC-2}}: Passwords.
+	\item{\textbf{test-SEC-3}}: Client Server Privacy.
+	\item{\textbf{test-SEC-4}}: Data storage and logging.
+	\item{\textbf{test-SEC-5}}: Data Backups.
+	
+\subsubsection{Cultural Requirements Tests}
+	\item{\textbf{test-CR-1}}: Profanity and Inappropriate Language.
+	\item{\textbf{test-CR-2}}: Reporting Offensive Language.
+\subsubsection{Legal Requirements Tests}
+	\item{\textbf{test-LR-1}}: Age and Gender Use.
+	\item{\textbf{test-LR-2}}: Data Protection.
+\end{enumerate}
 	
 \section{Comparison to Existing Implementation}	
 
