changes made due to testing

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -258,6 +258,15 @@ This section will not be appropriate for every project.
 \section{Unit Testing}
 
 \section{Changes Due to Testing}
+Listed below are some of the changes that are planned (some implemented) as a result of the testing and user testing.
+\subsection{Timer}
+During user testing one of the most desired additions to this application was a built in timer that would help for rest period and counting during workout sets. This addition makes sense as it helps users keep track of their timings without having the close the application to open up a timer. 
+\subsection{Auto Login}
+Another user suggestion was that when logging into the application from a point where the user has already logged in (e.g. logged in then closed the application then open again) then it is 'tedious' to log in again. There were many reasons for this such as users closing the application to change their music or check a text etc. Overall this change will help with the overall efficiency and user experience by bringing a more user friendly environment with less user actions in order to login and continue working out.
+\subsection{Styling}
+There were many positive reviews with the looks and styling of the application, However one of the minor changes that was mentioned was that some of the designed were 'too close together'. Taking in this feedback, the visual components may need to be spaced out more or even re-formatted in such a way that everything is less squashed together.
+\subsection{Tracking user Fitness Goals}
+Tracking Fitness goals has always been a stretch goal of this application. Some users asked to see a visual representation such as a graph over time or a numerical increment to help them see progress. This change will help users visually see and track their fitness goals and progress easier.
 
 \section{Automated Testing}
 		
